--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MyDatabaseExample</string>
+    <string name="new_film_tit">New Film</string>
+
+
+    <string name="newfilm_title">Title</string>
+    <string name="newfilm_director">Director</string>
+    <string name="newfilm_country">Country</string>
+    <string name="newfilm_year">Year</string>
+    <string name="newfilm_protagonist">Protagonist</string>
+    <string name="newfilm_critics_rate">Critics_rate</string>
 </resources>
