--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="newfilm_critics_rate">Critics_rate</string>
     <string name="deleted">Deleted %s</string>
     <string name="undo">Undo</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="more">More</string>
+    <string name="film_list">Film List</string>
+    <string name="help">Help</string>
+    <string name="about">About</string>
 </resources>
