Add Help and About fragment, make ratings work, sort by title as asked in statement

--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="film_list">Film List</string>
     <string name="help">Help</string>
     <string name="about">About</string>
+    <string name="dialog_help">To add an element tap the + button\n\nTo remove an element swipe it horizontally\n\nTo edit a rating click the rating bar\n\nMore actions are found in the left menu</string>
+    <string name="dialog_about">MyFilmDatabase\n\nBy Luuk Willemsen and David Williams</string>
 </resources>
