--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/values/strings.xml
@@ -16,11 +16,12 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
     <string name="more">More</string>
     <string name="film_list">Film List</string>
     <string name="help">Help</string>
     <string name="about">About</string>
     <string name="dialog_help">To add an element tap the + button\n\nTo remove an element swipe it horizontally\n\nTo edit a rating click the rating bar\n\nMore actions are found in the left menu</string>
     <string name="dialog_about">MyFilmDatabase\n\nBy Luuk Willemsen and David Williams</string>
+    <string name="search">Search</string>
 </resources>
